--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,21 @@
+/*--------------------------------------------FONT Framework*/
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+/*--------------------------------------------Colors*/
+
 body{
     color: black;
-    background-color: aqua;
+    background-color: white;
+}
+
+header{
+    margin: 0;
+}
+
+.logo{    
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 550px;
+    transition: .9s ease-in-out;
 }
