--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,47 @@
 /*--------------------------------------------FONT Framework*/
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-/*--------------------------------------------Colors*/
-
-body{
-    color: black;
-    background-color: white;
-}
+/
+/*--------------------------------------------Heading*/
 
 header{
     margin: 0;
 }
+
 
 .logo {
     background: url(../images/logo.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain; 
-    width: 100%; 
+    width: 100%;     
+    min-height: 360px;
     height: auto;
     transition: .9s ease-in-out;
+}
+
+.headings{
+    background-color: gray;
+}
+
+.heading{
+    font-family: "Poppins", sans-serif;
+    font-size: 80px;
+    font-weight: 400; 
+    /* background-color: gray; */
+    margin-top: 50px;
+}
+.sub_heading{
+    font-family: sans-serif;
+    font-size: 55px;
+    font-weight: 200;
+}
+/*--------------------------------------------Special Sizing/Padding/Margins*/
+
+
+/*--------------------------------------------Footer*/
+
+footer{
+    background-color: #C5E3EC;
+
 }
