--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,31 @@
 /*--------------------------------------------FONT Framework*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Indie+Flower&display=swap');
 
-/
+/*--------------------------------------------bg-colors*/
+
+
+
+.home{
+    background-color: #b71743; 
+    color: yellow; 
+    height: 120px;    
+    
+}
+.growth{
+    background-color: #b71743; 
+    color: yellow;
+}
+
+.change{
+    background-color: #b71743; 
+    color: yellow;
+}
+
+.about{
+    background-color: #b71743; 
+    color: yellow;
+}
+
 /*--------------------------------------------Heading*/
 
 header{
@@ -10,7 +34,8 @@ header{
 
 
 .logo {
-    background: url(../images/logo.png);
+    background: url(../images/logo2.png);
+    background-color: #63ADD2;
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain; 
@@ -21,21 +46,34 @@ header{
 }
 
 .headings{
-    background-color: gray;
+    background-color: #63ADD2;
 }
 
 .heading{
-    font-family: "Poppins", sans-serif;
+    font-family: "Indie Flower", sans-serif;
     font-size: 80px;
     font-weight: 400; 
     /* background-color: gray; */
     margin-top: 50px;
+    text-decoration-line: underline;
+    text-decoration-thickness: 3px;
 }
 .sub_heading{
-    font-family: sans-serif;
+    font-family: "Gamja Flower", sans-serif;
     font-size: 55px;
     font-weight: 200;
 }
+
+#nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: #63ADD2;  */
+    height: 120px;    
+    text-align: center;
+}
+
+
 /*--------------------------------------------Special Sizing/Padding/Margins*/
 
 
@@ -43,5 +81,4 @@ header{
 
 footer{
     background-color: #C5E3EC;
-
 }
