--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,17 @@ header{
     margin-top: 30px;
 }
 
+.address {
+    line-height: 0;
+}
+
+#sign_up{
+    /* margin-left: 100px; */
+    
+    /* margin-top: 100px; */
+}
+
+
 /*--------------------------------------------Footer*/
 
 footer {
