--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,47 +2,49 @@
 @import url('https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Indie+Flower&display=swap');
 
 /*--------------------------------------------Color*/
-body{
+body {
     background-color: #63ADD2;
 }
 
 /*--------------------------------------------Heading*/
-header{
+header {
     margin: 0;
 }
 
 
 .logo {
-    background: url(../images/logo2.png);   
+    background: url(../images/logo2.webp);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: contain; 
-    width: 100%;     
+    background-size: contain;
+    width: 100%;
     min-height: 360px;
     height: auto;
     transition: .9s ease-in-out;
 }
 
-.headings{
+.headings {
     background-color: #63ADD2;
 }
 
-.jumbotron {    
+.jumbotron {
     background-color: #63ADD2;
     padding: 4rem 2rem;
 }
+
 /*--------------------------------------------main section*/
 
-.pic {   
-    background: url(../images/diversity.png);     
+.pic {
+    background: url(../images/diversity.webp);
     background-position: center;
-    background-repeat: no-repeat;    
-    background-size: contain; 
-    width: 100%;     
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100%;
     min-height: 650px;
     transition: .9s ease-in-out;
 }
-.learn p{
+
+.learn p {
     margin-top: 30px;
 }
 
@@ -57,6 +59,7 @@ footer {
     padding: 50px;
     text-align: center;
 }
+
 #footer-details {
     display: flex;
     justify-content: center;
@@ -73,26 +76,27 @@ footer {
     text-align: center;
     color: #fafafa;
     background: #5645ee;
-    transition: all 0.9s ease-in-out;    
+    transition: all 0.9s ease-in-out;
 }
 
 .social li a i:hover {
     background: #00ce2d;
 }
+
 /*--------------------------------------------Media Queries 4 Mobile*/
 @media (max-width: 768px) {
     .pic {
-        min-height: 300px; 
-        margin-top: -70px; 
+        min-height: 300px;
+        margin-top: -70px;
     }
 
     .jumbotron {
-        padding: 2rem 1rem; 
+        padding: 2rem 1rem;
     }
 
     .jumbotron a {
-        margin-top: 20px; 
-        width: 100%; 
+        margin-top: 20px;
+        width: 100%;
     }
 
 }
@@ -100,19 +104,19 @@ footer {
 /*--------------------------------------------Media Queries 4 desktop*/
 @media (min-width: 769px) {
     .pic {
-        min-height: 650px; 
-        margin-top: 20px; 
+        min-height: 650px;
+        margin-top: 20px;
     }
 
     .jumbotron {
-        padding: 4rem 2rem; 
+        padding: 4rem 2rem;
     }
 
     .jumbotron a {
-        width: 200px; 
-        height: 60px; 
-        font-size: 20px; 
-        padding: 15px 30px; 
-        margin: 10px; 
+        width: 200px;
+        height: 60px;
+        font-size: 20px;
+        padding: 15px 30px;
+        margin: 10px;
     }
 }
