--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,13 @@ header {
     line-height: 0;
 }
 
+#why{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    font-family: "Indie Flower", sans-serif;
+}
+
 /*--------------------------------------------Footer*/
 
 footer {
