--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ header {
     background-size: contain;
     width: 100%;
     min-height: 650px;
-    transition: .9s ease-in-out;
+    transition: .3s ease-in-out;
 }
 
 .learn p {
@@ -60,7 +60,7 @@ header {
     display: flex;
     justify-content: center;
     margin-top: 20px;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     font-family: "Indie Flower", sans-serif;
 }
 
@@ -113,7 +113,7 @@ footer {
 
     #why{       
         margin-top: 0;
-        margin-bottom: 50px;        
+        margin-bottom: 40px;        
     }
 
 }
